--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 maap_graphs/
-#site_data/
-#sparse_datasets/
-#discharge_records/
+site_data/
+sparse_datasets/
+discharge_records/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
