empty date filler fix

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ sparse_datasets/
 discharge_records/
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
+#__pycache__/
 *.py[cod]
 
 # C extensions
